maapkan codenya berantakan, updated: custom scrollbar, timeline, sticky navbar. soon: responsivitas, scrolling bug, komentar

--- a/src/view/friends-page/styles.css
+++ b/src/view/friends-page/styles.css
@@ -1,5 +1,5 @@
 * {font-family: -apple-system, Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
-html {zoom: 0.8;}
+/* html {zoom: 0.8;} */
 .header {
     width: 100%;
     height: 87px;
