--- a/src/view/profile/style.css
+++ b/src/view/profile/style.css
@@ -1,5 +1,5 @@
 * {font-family: -apple-system, Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
-html {zoom: 0.8;}
+/* html {zoom: 0.8;} */
 
 /* Header*/
 .header {
